# sales_development_representative

./: README.md  pyproject.toml  report.md
src/sales_development_representative/: crew.py  main.py
src/sales_development_representative/config/: agents.yaml  tasks.yaml
